--- a/.github/cd-config.json
+++ b/.github/cd-config.json
@@ -1,5 +1,10 @@
 {
     "platform": "ios",
+    "common": [
+        {
+            "runs-on": ["macos-latest"],
+        }
+    ],
     "build": [
           {
             "name": "Publish new Pods",
