--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,6 @@ jobs:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
         run: |
           bundle install
+          git config --global user.name 'Ashish Awasthi'
+          git config --global user.email 'awasthi027@users.noreply.github.com'
           fastlane publicNewPod
