--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     name: "Build"
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@main
         with:
           token: ${{ secrets.PAT_GITHUB }}
       - name: Publish to CocoaPod register
