--- a/.github/workflows/callerWorkFlow.yml
+++ b/.github/workflows/callerWorkFlow.yml
@@ -1,17 +1,31 @@
 
-name: Call Reuseable Workflow
+name: CI Workflows via Fastlane 
 
 on:
   workflow_dispatch:
 
 jobs:
-   build:
+   prepare:
+      name: '🌱 Seed Workflow Config 🌱'
+      runs-on: macos-latest
+      outputs:
+        matrix: ${{ steps.readjson.outputs.config-content }}
+      steps:
+        - name: Checkout Source Repository
+          id: checkoutSource
+          uses: actions/checkout@main
+          with:
+            token: ${{secrets.PAT_GITHUB}}
+        - name: Validate Build Configuration
+          id: readjson
+          uses: awasthi027/validate-workflow-config-action@v1
+          with: 
+            config-path: './.github/configuration/ci.json'
+  CIJobs:
     uses: awasthi027/shared-workflow/.github/workflows/reuseableWorkflow.yml@main
     with:
-      projectName: API-iOS
-      schemaName: API_iOSTests
-      buildScriptDir: iosBuildScripts
-      destinationDir: api-ios
+      config_path: './.github/configuration/ci.json'
+      config: ${{ needs.prepare.outputs.matrix }}
     secrets:
       git_token: ${{secrets.PAT_GITHUB}}
       cocoapods_trunk_token: ${{secrets.COCOAPODS_TRUNK_TOKEN}}
