--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-WORKSPACE_NAME="API-iOS.workspace"
+WORKSPACE_NAME="API-iOS.xcodeproj"
 PROJECT_NAME="API-iOS"
 WORKSPACE_SCHEME="API_iOSTests"
 DEVELOPER_DIR=/Applications/Xcode.app/Contents/Developer
-SIMULATOR_RUNTIME=17-0
+SIMULATOR_RUNTIME=17.5
 SIMULATOR_DEVICE_TYPE=iPhone 15
 POD_INSTALL_REQUIRED=true
+GENRIC_MESSAGE="This is Test Message"
