Added pod file.

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ SIMULATOR_RUNTIME=17.5
 SIMULATOR_DEVICE_TYPE=iPhone 15
 POD_INSTALL_REQUIRED=true
 GENRIC_MESSAGE="This is Test Message"
+REPO_URL="https://github.com/awasthi027/api-ios.git"
