--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-WORKSPACE_NAME="API-iOS.xcodeproj"
-PROJECT_NAME="API-iOS"
-WORKSPACE_SCHEME="API_iOSTests"
+WORKSPACE_NAME="api-ios.xcodeproj"
+PROJECT_NAME="api-ios"
+WORKSPACE_SCHEME="api-iosTests"
 DEVELOPER_DIR=/Applications/Xcode.app/Contents/Developer
-SIMULATOR_RUNTIME=17.5
-SIMULATOR_DEVICE_TYPE=iPhone 15
+SIMULATOR_RUNTIME=18.0
+SIMULATOR_DEVICE_TYPE=iPhone 16
 POD_INSTALL_REQUIRED=true
 GENRIC_MESSAGE="This is Test Message"
+SCAN_DEVIĆ="iPhone 16" # This will auto detect scan the device
