--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 ## User settings
 xcuserdata/
 
+# Xcode
+xcuserdata/
+project.xcworkspace/
+DerivedData/
+
+
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
@@ -55,9 +61,11 @@ playground.xcworkspace
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 # Pods/
+Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
+*.xcworkspace
 
 # Carthage
 #
