--- a/Apps/TestApp/Podfile
+++ b/Apps/TestApp/Podfile
@@ -1,21 +1,24 @@
-# Uncomment the next line to define a global platform for your project
- platform :ios, '15.0'
+
+ source 'https://github.com/awasthi027/ios-spec.git'
+
+ platform :ios, '16.0'
 
 target 'TestApp' do
   # Comment the next line if you don't want to use dynamic frameworks
-  use_frameworks!
-  pod 'API-iOS'
+   use_frameworks!
+   pod 'api-ios'
+
   # Pods for TestApp
 
   target 'TestAppTests' do
     inherit! :search_paths
     # Pods for testing
-#    pod 'API-iOS'
+    pod 'api-ios'
   end
 
   target 'TestAppUITests' do
     # Pods for testing
-#    pod 'API-iOS'
+    pod 'api-ios'
   end
 
 end
